[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
description = "Formatter for mq query language files"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "formatter", "mq"]
license = "MIT"
name = "mq-fmt"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
miette = { version = "7.6.0", features = ["fancy"] }
mq-formatter = "0.5.28"

[[bin]]
name = "mq-fmt"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
strip = true
